--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-  <header class="bg-[#E5EAE1]">
+  <header class="bg-[#E5EAE1] px-8">
     <div class="flex justify-between max-w-5xl mx-auto items-center py-5">
       <div>
         <img src="/images/pines.png" class="w-[50px]">
@@ -25,17 +25,17 @@
     </div>
   </header>
 
-  <div class="bg-hero bg-cover">
+  <div class="bg-hero bg-cover px-8">
     <div class="flex flex-col items-center max-w-[600px] mx-auto items-center py-20">
-      <div class="font-title text-green text-[34px] leading-3">
+      <div class="font-title text-green text-[28px] md:text-[34px] leading-[34px]">
         Palos Pines
       </div>
 
-      <h1 class="font-title text-white text-[64px] leading-tight mb-4">
+      <h1 class="font-title text-white text-[50px] md:text-[64px] leading-[58px] mb-4">
         Block Party
       </h1>
 
-      <p class="text-white text-center text-[22px] leading-[28px] font-light mb-10">
+      <p class="text-white text-center text-[18px] md:text-[22px] leading-[28px] font-light mb-10">
         Welcome to the home of the Palos Pines Block Party!
         Here you can find event information, make a donation,
         and contact the organizers.
@@ -49,16 +49,16 @@
     </div>
   </div>
 
-  <div class="max-w-5xl mx-auto items-center py-20">
+  <div class="max-w-5xl mx-auto items-center py-20 px-8">
     <h2 class="font-title text-[34px] font-bold ">
       Make a Donation
     </h2>
 
     <p class="text-[18px] mb-10 font-light">Please use one of the following methods to submit a donation:</p>
 
-    <div class="flex justify-between">
-      <ul class="text-[18px] font-light space-y-4 ml-10 list-disc">
-        <li>Scan the Venmo QR code to the right with your phone camera</li>
+    <div class="flex flex-wrap gap-10 justify-between">
+      <ul class="text-[18px] font-light space-y-8 md:space-y-4 ml-4 md:ml-10 list-disc">
+        <li>Scan the Venmo QR code with your phone's camera</li>
         <li>Send a Venmo payment to <span class="font-semibold text-green">@palospinesblockparty</span></li>
         <li>Send a Zelle payment to <span class="font-semibold text-green">@palospinesblockparty</span></li>
         <li>
@@ -71,7 +71,7 @@
         </li>
       </ul>
 
-      <div>
+      <div class="mr-16">
         <img src="/images/qr-code.png" class="w-[220px]">
       </div>
     </div>
