--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </h1>
 
       <div class="text-white text-center text-[18px] md:text-[22px] leading-[28px] font-light mb-10 space-y-2">
-        <p>August 16, 2025</p>
-        <p>2:00pm - 12:00am</p>
+        <p>Saturday, August 16 2025</p>
+        <p>3:00pm - 10:00pm</p>
       </div>
 
       <div>
@@ -59,7 +59,11 @@
 
     <div class="flex flex-wrap gap-10">
       <ul class="md:basis-1/2 text-[18px] font-light space-y-8 md:space-y-4 ml-4 md:ml-10 list-disc">
-        <li>Use this QR code to pay digitally via <strong class="font-bold">Zelle</strong> (scan code with phone camera, find your bank, send to: Elizabeth Hackett)</li>
+        <li>
+          Use this QR code to pay digitally via <strong class="font-bold">Zelle</strong><br>
+          (scan code with phone camera, find your bank, send to: Palos Pines Homeowner's Association)
+        </li>
+
         <li>
           <div class="mb-2">Send cash or check to:</div>
           <span class="text-green font-semibold">
@@ -71,7 +75,7 @@
       </ul>
 
       <div class="mr-16">
-        <img src="/images/qr-code2.png" class="w-[220px]">
+        <img src="/images/qr-code-palos-pines.png" class="w-[220px]">
       </div>
     </div>
   </div>
@@ -87,8 +91,8 @@
       <h3 class="font-bold text-xl mb-1">Date</h3>
 
       <div>
-        August 16, 2025 <br>
-        2pm - 12am
+        Saturday, August 16 2025 <br>
+        3pm - 10pm
       </div>
     </div>
 
@@ -98,32 +102,6 @@
       <div>
         On Syamore Ln, between Ponderosa Dr and White Pine Pl
       </div>
-    </div>
-
-    <div class="mb-7">
-      <h3 class="font-bold text-xl mb-1">Schedule</h3>
-
-      <ul class="space-y-2 mb-6">
-        <li><strong>2pm:</strong> Bike decorating, bike parade & craft</li>
-        <li><strong>2pm:</strong> DJ begins</li>
-        <li><strong>2-8pm:</strong> Raffle ticket sales</li>
-        <li><strong>3pm:</strong> Kids musical games (limbo, musical chairs, freeze dance)</li>
-        <li><strong>3-7pm:</strong> Bounce house</li>
-        <li><strong>4pm:</strong> Face painting</li>
-        <li><strong>4-6pm:</strong> Joey's Redhots</li>
-        <li><strong>8pm:</strong> Pull & announce raffle winners</li>
-      </ul>
-
-      <div class="text-lg mb-2">
-        <strong>Bonus!</strong>
-      </div>
-
-      <ul class="space-y-2 ml-4 list-disc">
-        <li>A visit from the Palos Heights Police & Fire Departments</li>
-        <li>Ice Cream Truck (self-pay)</li>
-        <li>Face painting</li>
-        <li>Adult games</li>
-      </ul>
     </div>
   </div>
 
